# Deep-Learning-for-Semiparametric-DiD-Estimation

./: .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  SZ_dl.ipynb  SZ_dl_backup.ipynb  SZ_dl_heterogeneity.ipynb  abadie.ipynb  abadie_dl.ipynb  add_nonlinearities.ipynb  application.ipynb  architecture_test.ipynb  environment.yml  high_cov.ipynb  mc_deep_learning.ipynb  moretests.ipynb  plot_relu.ipynb  pyproject.toml  setup.cfg  test.ipynb  twfe_het_backup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: Meine Bibliothek.bib  appendix.tex  application.tex  conclusion.tex  deep_learning_for_semiparametric_did_estimation.bbl-SAVE-ERROR  deep_learning_for_semiparametric_did_estimation.bcf-SAVE-ERROR  deep_learning_for_semiparametric_did_estimation.tex  deep_learning_for_semiparametric_did_estimation.toc  deep_learning_for_semiparametric_did_estimation_pres.nav  deep_learning_for_semiparametric_did_estimation_pres.tex  deepl.tex  discussion.tex  intro.tex  methodology.tex  montecarlo.tex  refs.bib  statement.tex  task_paper.py  title.tex
paper/graphs/: table_application_res.tex  table_dgp1.tex  table_het_dgp4.tex  table_loss_report.tex  table_low_dim.tex  table_nn.tex
src/deep_learning_for_semiparametric_did_estimation/: __init__.py
src/deep_learning_for_semiparametric_did_estimation/analysis/: __init__.py  dr_dgp1.py  dr_dgp2.py  dr_dgp3.py  dr_dgp4.py  dr_did.py  het_dr_dgp4.py  het_ipw_dgp4.py  het_twfe_dgp4.py  ipw_dgp1.py  ipw_dgp2.py  ipw_dgp3.py  ipw_dgp4.py  task_analysis.py  twfe_dgp1.py  (+3 more)
(+4 files in other folders)
