[metadata]
name = deep_learning_for_semiparametric_did_estimation
description = Deep Learning for Semiparametric DiD Estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NormProgr/deep_learning_for_semiparametric_did_estimation
author = Norman
author_email = s6nometz@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/NormProgr/deep_learning_for_semiparametric_did_estimation
    Documentation = https://github.com/NormProgr/deep_learning_for_semiparametric_did_estimation
    Github = https://github.com/NormProgr/deep_learning_for_semiparametric_did_estimation
    Tracker = https://github.com/NormProgr/deep_learning_for_semiparametric_did_estimation/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/deep_learning_for_semiparametric_did_estimation/_version.py
